# kbase-service-orcidlink

./: Dockerfile  Dockerfile.dev  Taskfile  pyproject.toml
.devcontainer/: Dockerfile  Dockerfile.dev  Dockerfile.devcontainer  docker-compose.yml
.github/workflows/: reusable_pre-build.yml
docs/api/: index.md  openapi.json
docs/development/: development.md  local-deploy-server.md  testing.md
docs/operation/: database-maintenance.md  deployment.md
docs/quick-starts/: architecture.md  configuration.md  deployment.md  errors.md  maintenance-script.md  oauth-workflow.md
scripts/: start-server.sh
src/boot/: service_initialization.py
src/misc/: generate-openapi.py
src/orcidlink/: main.py  model.py  runtime.py
src/orcidlink/jsonrpc/methods/: common.py  manage.py  works.py
src/orcidlink/lib/: config.py  json_support.py  logger.py  responses.py
src/orcidlink/lib/service_clients/: kbase_auth.py  orcid_api.py  orcid_api_error_codes.py  orcid_api_errors.py  orcid_oauth_api.py  orcid_oauth_api_errors.py
src/orcidlink/routers/: interactive_route.py  linking_sessions.py
src/orcidlink/storage/: storage_model_mongo.py
src/orcidlink/translators/: to_orcid.py  to_service.py
src/test/: test_main.py
src/test/lib/: test_config.py  test_json_support.py  test_logger.py  test_responses.py
src/test/lib/service_clients/: test_orcid_api_errors.py
src/test/methods/: test_linking_sessions.py
src/test/mocks/: env.py  mock_auth.py  mock_contexts.py  mock_orcid.py
src/test/service_clients/: test_orcid_api.py  test_orcid_oauth_api.py
src/test/translators/: test_to_service.py
test/data/orcid/: get-works-bad-put-code.json
tools/: docker-compose-dev.yml  docker-compose-prod-like.yml  docker-compose-runner.yml
tools/runner/: Dockerfile  docker-compose-tool-testing.yml
typings/fastapi_jsonrpc/: __init__.pyi
